--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
