--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
     "json-server": "^1.0.0-beta.3",
+    "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
